# data-lake-backend-fsbo

./: .gitignore  AWS_FSBO_Lambda_Setup.md  COPY_COMPLETE.md  COPY_SUMMARY.md  FSBO_Bulk_Scraper_Pipeline.md  FSBO_PIPELINE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PUSH_TO_GITHUB.md  README.md  SCALABILITY_500_USERS_SUMMARY.md  SCHEMA_ENHANCEMENTS_IMPLEMENTATION.md  SCHEMA_IMPROVEMENTS_SUMMARY.md  SYNC_QUICK_REFERENCE.md  create-and-push-repo.ps1  create-repo-simple.ps1  cyber_background_checks_lookup.py  cyber_background_checks_result_1739_Emerald_Sea.txt  familytreenow_lookup.py  proxies.txt.example  recon_lookup_1739_Emerald_Sea.txt
config/: load_config.py  pipeline-config.json  pipeline-config.ts  pipeline-config.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT_500_USERS.md  EC2_FSBO_WORKER_SETUP.md  PROJECT_STRUCTURE.md  SCALABILITY_500_USERS.md  SCHEMA_ENHANCEMENTS.md  SUPABASE_REFRESH_TOKEN_FIX_PLAN.md  SYNC_GUIDE.md
scripts/: APOLLO_LISTS_IMPLEMENTATION.md  APOLLO_LISTS_SETUP.md  AUTH_PROVIDER_COMPARISON.md  AZURE_OAUTH_SETUP.md  BRAND_UPDATE_SUMMARY.md  BUILD_LOG_FIX.md  BYO_TWILIO_IMPLEMENTATION.md  CALENDAR_CRON_JOBS.md  CALENDAR_ENVIRONMENT_VARIABLES.md  CALENDAR_INTEGRATION_README.md  CAMPAIGN_LISTINGS_IMPLEMENTATION.md  CAROUSEL_ROBUST_LOCKING_FIX.md  CAROUSEL_SCAN_REPORT.md  CREATE_USER_INSTRUCTIONS.md  CRON_JOB_VERIFICATION.md  CROSS_PAGE_INTEGRATION.md  DASHBOARD_REBUILD_SUMMARY.md  DEALMACHINE_IMPLEMENTATION_SUMMARY.md  DEALMACHINE_MODAL_ANALYSIS.md  DEALS_FILTERS_UPDATE.md  DEALS_MODULE_DOCUMENTATION.md  DEAL_FORM_UPDATE_SUMMARY.md  DEPLOY_TO_SQUARESPACE_DOMAIN.md  DEPRECATION_WARNINGS_FIX.md  EMAIL_ANALYTICS_FIX_SUMMARY.md  EMAIL_CRON_SETUP.md  EMAIL_ENVIRONMENT_SETUP.md  EMAIL_MARKETING_FIXES_SUMMARY.md  EMAIL_MARKETING_TESTS_COMPLETE.md  EMAIL_MODULE_COMPLETION_SUMMARY.md  EMAIL_MODULE_FINAL_SUMMARY.md  EMAIL_MODULE_IMPROVEMENTS_SUMMARY.md  EMAIL_MODULE_TEST_CHECKLIST.md  EMAIL_OAUTH_REDIRECT_URIS_SUMMARY.md  EMAIL_OAUTH_SCOPES.md  EMAIL_QUICK_START.md  EMAIL_REDIRECT_URIS.md  EMAIL_SYSTEM_FIXES_SUMMARY.md  EMAIL_SYSTEM_IMPLEMENTATION.md  EMAIL_TABLE_USAGE_DOCUMENTATION.md  (+90 more)
scripts/redfin-scraper/: .env.example  Enrichment.py  FSBO.py  README.md  aws_lambda_proxy.py  aws_setup.py  diagnose_sqs.py  ec2-userdata-bootstrap.sh  enqueue_fsbo_sqs.py  fsbo_sqs_worker.py  lambda_fsbo_worker.py  orchestrator.py  proxies.txt.example  proxy_rotation.py  pyproject.toml  requirements-fsbo-worker.txt  ssm_set_env_on_ec2.sh  start_fsbo_worker.sh  store_fsbo_secrets_ssm.ps1  supabase_client.py  test_enrichment.py  test_supabase_fsbo_push.py  worker.py
scripts/redfin-scraper/nextdeal_redfin/: __init__.py  cli.py  enrichment.py  handlers.py  http_client.py  ip_rotation.py  pipeline.py  scraper.py  supabase_client.py
scripts/redfin-scraper/tests/: test_fsbo_pipeline.py
scripts/supabase/: INSTALLATION_ORDER.md  INSTALLATION_ORDER_SCALABILITY.md  LISTINGS_VIEW_README.md  QUICK_FIX_CREATE_CATEGORY_TABLES.sql  README_SCALABILITY.md  README_SCHEMAS.md  add_campaign_end_at.sql  add_campaign_resume_fields.sql  add_campaign_stop_on_reply.sql  add_fsbo_pagination_columns_to_fsbo_leads.sql  address_normalization_schema.sql  apollo_lists_schema.sql  calendar_schema.sql  calendar_settings_schema.sql  campaign_advanced_options_schema.sql  campaign_listings_schema.sql  campaign_mailboxes_schema.sql  campaign_options_schema.sql  campaign_step_variants_schema.sql  campaigns_complete_schema.sql  canonical_id_strategy.sql  complete_schema.sql  (+60 more)
sdk/python/: README.md  pyproject.toml
sdk/python/nextdeal_datalake/: __init__.py  client.py  models.py  pipelines.py  zones.py
(+11 files in other folders)
