[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextdeal-redfin"
version = "0.1.0"
description = "World-class Redfin FSBO lead scraper for NextDeal data lake"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NextDeal", email = "dev@nextdeal.com"}
]
keywords = ["redfin", "scraper", "fsbo", "real-estate", "leads"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "supabase>=2.0.0",
    "redis>=5.0.0",
    "requests-ip-rotator>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
aws = [
    "boto3>=1.28.0",
]

[project.scripts]
nextdeal-fsbo = "nextdeal_redfin.cli:main"
nextdeal-fsbo-scrape = "nextdeal_redfin.cli:scrape_command"
nextdeal-fsbo-enrich = "nextdeal_redfin.cli:enrich_command"
nextdeal-fsbo-worker = "nextdeal_redfin.cli:worker_command"

[project.urls]
Homepage = "https://github.com/dacionxo/Data-Lake-Backend"
Documentation = "https://github.com/dacionxo/Data-Lake-Backend/blob/main/scripts/redfin-scraper/README.md"
Repository = "https://github.com/dacionxo/Data-Lake-Backend"
Issues = "https://github.com/dacionxo/Data-Lake-Backend/issues"

[tool.setuptools]
packages = ["nextdeal_redfin"]

[tool.setuptools.package-data]
nextdeal_redfin = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

